[tool.poetry]
name = "cyanbot"
version = "0.1.0"
description = "A Python SDK for QQ Bot."
authors = ["Ricky8955555 <397050061@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["cyan"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
reportImportCycles = "none"
