[tool.poetry]
name = "cyansdk"
version = "0.1.1"
description = "A Python SDK for QQ Bot."
authors = ["Ricky8955555 <397050061@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.huajitech.net/huajitech/cyan"
documentation = "https://huajitech.proj.zone/cyan"
keywords = ["bot", "qq", "qqbot"]
packages = [
  { include = "cyan" },
]
include = ["cyan/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"
websockets = "^10.1"
frozendict = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyright = "^0.0.13"
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["cyan", "examples"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
reportImportCycles = "none"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
